--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -8,6 +8,16 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
     />
+    <style>
+      @font-face {
+        font-family: SauceCodePro;
+        src: url('SourceCodePro.ttf');
+      }
+      * {
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
   </head>
 
   <body>
